# OSI-X

./: Cargo.toml  build.rs  partitions.csv  sdkconfig.defaults
.cargo/: config.toml
src/: app.rs  error.rs
src/board/: mod.rs  pins.rs  power.rs  rgb.rs  watchdog.rs
src/config/: mod.rs  motion.rs  network.rs  printer.rs  temperature.rs
src/drivers/: mod.rs
src/drivers/motor/: axis.rs  driver.rs  mod.rs
src/drivers/motor/tmc2209/: driver.rs  mod.rs  registers.rs  status.rs  uart.rs
src/drivers/motor/uln2003/: driver.rs  gpio.rs  mod.rs
src/endstops/: mod.rs
src/gcode/commands/: mod.rs
